	* fix total_want/want accounting when forcing a recheck
	* fix merging metadata with magnet links added on top of existing torrents
	* add torrent_flag to default all file priorities to dont_download
	* fix &so= feature in magnet links
	* improve compatibility of SOCKS5 UDP ASSOCIATE
	* fix madvise range for flushing cache in mmap_storage
	* open files with no_cache set in O_SYNC mode

* 2.0.7 released

	* fix issue in use of copy_file_range() on linux
	* avoid open-file race in the file_view_pool
	* fix issue where stop-when-ready would not close files
	* fix issue with duplicate hybrid torrent via separate v1 and v2 magnet links
	* added new function to load torrent files, load_torrent_*()
	* support sync_file_range() on linux
	* fix issue in write_torrent_file() when file size is exactly piece size
	* fix file_num_blocks() and file_num_pieces() for empty files
	* add new overload to make_magnet_uri()
	* add missing protocol version to tracker_reply_alert and tracker_error_alert
	* fix privilege issue with SetFileValidData()
	* add asynchronous overload of torrent_handle::add_piece()
	* default to a single hashing thread, for full checks
	* Fix bug when checking files and the first piece is invalid

* 2.0.6 released

	* fix issue creating a v2 torrent from torrent_info containing an empty file
	* make recheck files also update which files use partfile
	* add write_through disk_io_write_mode, which flushes pieces to disk immediately
	* improve copy file function to preserve sparse regions (when supported)
	* add function to truncate over-sized files part of a torrent
	* fix directory creation on windows shared folders
	* add flag to make add_files() not record file attributes
	* deprecate (unused) allow_partial_disk_writes settings
	* fix disk-full error reporting in mmap_disk_io
	* fixed similar-torrents feature for v2 torrents
	* fix potential unbounded recursion in add_completed_job, in disk I/O
	* deprecated (unused) volatile_read_cache setting